--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gsap": "^3.12.7",
     "libphonenumber-js": "^1.12.8",
     "lucide-react": "^0.485.0",
+    "mailgun.js": "^12.0.3",
     "motion": "^12.7.4",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
